syntax = "proto3";

option java_multiple_files = true;

service PointService {
  rpc addPoint (PointDTO) returns (EmptyDTO) {}
  rpc addPointStream (stream PointDTO) returns (EmptyDTO) {}
}

message PointDTO {
  double x = 1;
  double y = 2;
}

message EmptyDTO{}